--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: page
 title: "About"
 description: "「We are a team of software engineers and AI engineers who are passionate about creating music with AI.」"
-header-img: "img/bg-me-2022.jpg"
+header-img: "img/bg-universe.jpg"
 header-mask: 0.3
 multilingual: true
 ---
